tests/fixtures/invalid/none_add_float.py
# Cannot add None and Float
x: float = None + 1.0
